--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "client",
+  "proxy": "http://localhost:5000/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +15,7 @@
     "react-dom": "^17.0.1",
     "react-file-base64": "^1.0.3",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
